<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_blue_900"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/md_indigo_700"
        android:elevation="4dp"
        android:textColor="@color/md_white_1000"
        android:title="@string/app_name"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarTheme" />

    <Button
        android:id="@+id/btnShowGraduationCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/md_yellow_A200"
        android:padding="20dp"
        android:text="@string/graduation"
        android:textColor="@color/md_grey_900"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnShowPostgraduateCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/md_yellow_A200"
        android:padding="20dp"
        android:text="@string/postgraduate"
        android:textColor="@color/md_grey_900"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnShowGeneralAuthorizationAct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/md_yellow_A200"
        android:padding="20dp"
        android:text="@string/authorization_act"
        android:textColor="@color/md_grey_900"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnShowStudentManual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/md_yellow_A200"
        android:padding="20dp"
        android:text="@string/student_manual"
        android:textColor="@color/md_grey_900"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnShowDisciplinaryRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/md_yellow_A200"
        android:padding="20dp"
        android:text="@string/disciplinary_rules"
        android:textColor="@color/md_grey_900"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btnShowLeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="5dp"
        android:background="@color/md_yellow_A200"
        android:padding="5dp"
        android:text="@string/leaders"
        android:textColor="@color/md_grey_900"
        android:textSize="15dp" />

</LinearLayout>