<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    app:cardBackgroundColor="@color/md_white_1000"
    app:cardCornerRadius="5dp"
    app:contentPadding="5sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/md_grey_900"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/code"
                android:textColor="@color/md_grey_900"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCodeCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/md_grey_900"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_payment"
                android:textColor="@color/md_grey_900"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMonthlyPayment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/md_grey_900"
                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shift"
                android:textColor="@color/md_grey_900"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewShift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="@color/md_grey_900"

                android:textSize="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/modality"
                android:textColor="@color/md_grey_900"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewModality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="1dp"
                android:text=""
                android:textColor="@color/md_grey_900"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/mec_evaluation"
                android:textColor="@color/md_grey_900"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewMECEvaluation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text=""
                android:textColor="@color/md_grey_900"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/duration"
                android:textColor="@color/md_grey_900"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text=""
                android:textColor="@color/md_grey_900"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@string/coordinator"
                android:textColor="@color/md_grey_900"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCoordinator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="1dp"
                android:text=""
                android:textColor="@color/md_grey_900"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnShowAuthorizationAct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_indigo_700"
                android:text="@string/authorization_act"
                android:textColor="@color/md_white_1000"
                android:textSize="8dp" />

            <Button
                android:id="@+id/btnShowCoursePedagogicalPlan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/md_indigo_700"
                android:text="@string/course_pedagogical_project"
                android:textColor="@color/md_white_1000"
                android:textSize="8dp" />

            <Button
                android:id="@+id/btnShowBiBliographiPlan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_indigo_700"
                android:text="@string/bibliographic_collection"
                android:textColor="@color/md_white_1000"
                android:textSize="8dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnShowTeacher"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_indigo_700"
                android:text="@string/teachers"
                android:textColor="@color/md_white_1000"
                android:textSize="8dp" />

            <Button
                android:id="@+id/btnShowCurriculum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/md_indigo_700"
                android:text="@string/curriculum"
                android:textColor="@color/md_white_1000"
                android:textSize="8dp" />

            <Button
                android:id="@+id/btnShowDiscipline"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/md_indigo_700"
                android:text="@string/disciplines"
                android:textColor="@color/md_white_1000"
                android:textSize="8dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>


